[package]
name = "mpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
# bevy-inspector-egui = "0.18"
# bevy_fly_camera = "0.10.0"
smooth-bevy-cameras = "0.8"
rand = "0.8.5"
rayon = "1.7.0"
anyhow = "1.0.72"
bytemuck = "1.13.1"
memmap2 = "0.7.1"

[profile.dev]
opt-level = 3

